# backend/routes/books.js
@@ -3,6 +3,7 @@
 const router = require("express").Router();
 const response = require("@utils/response");
 const auth = require("@utils/auth");
+const upload = require("@models/uploads");
 
 const getBooks = require("@services/books-get");
 const addBooks = require("@services/books-add");
@@ -15,6 +16,9 @@ const getBooksOrphaned = require("@services/books-get-orphaned");
 const getBooksFavourites = require("@services/books-get-favourite");
 const getBooksProgress = require("@services/books-get-progress");
 const getBooksNew = require("@services/books-get-new");
+
+const getEbook = require("@services/books-get-ebook");
+const addEbook = require("@services/books-add-ebook");
 
 /**
  * @swagger
@@ -34,7 +38,7 @@ const getBooksNew = require("@services/books-get-new");
  *         '405':
  *           description: Incorrect request data
  */
-router.get("/", auth.restrict(["get_data"]), async (req, res, next) => {
+router.get("/", auth.restrict(["get_data"]), async (req, res) => {
     const data = await getBooks();
     response(res, req, data);
 });
@@ -57,7 +61,7 @@ router.get("/", auth.restrict(["get_data"]), async (req, res, next) => {
  *         '405':
  *           description: Incorrect request data
  */
-router.get("/orphaned", auth.restrict(["get_data"]), async (req, res, next) => {
+router.get("/orphaned", auth.restrict(["get_data"]), async (req, res) => {
     const data = await getBooksOrphaned();
     response(res, req, data);
 });
@@ -80,14 +84,10 @@ router.get("/orphaned", auth.restrict(["get_data"]), async (req, res, next) => {
  *         '405':
  *           description: Incorrect request data
  */
-router.get(
-    "/favourites",
-    auth.restrict(["get_data"]),
-    async (req, res, next) => {
-        const data = await getBooksFavourites(req.user);
-        response(res, req, data);
-    }
-);
+router.get("/favourites", auth.restrict(["get_data"]), async (req, res) => {
+    const data = await getBooksFavourites(req.user);
+    response(res, req, data);
+});
 
 /**
  * @swagger
@@ -107,7 +107,7 @@ router.get(
  *         '405':
  *           description: Incorrect request data
  */
-router.get("/progress", auth.restrict(["get_data"]), async (req, res, next) => {
+router.get("/progress", auth.restrict(["get_data"]), async (req, res) => {
     const data = await getBooksProgress(req.user);
     response(res, req, data);
 });
@@ -140,7 +140,7 @@ router.get("/progress", auth.restrict(["get_data"]), async (req, res, next) => {
  *         '405':
  *           description: Incorrect request data
  */
-router.get("/new", auth.restrict(["get_data"]), async (req, res, next) => {
+router.get("/new", auth.restrict(["get_data"]), async (req, res) => {
     const data = await getBooksNew(req.body?.records);
     response(res, req, data);
 });
@@ -170,14 +170,10 @@ router.get("/new", auth.restrict(["get_data"]), async (req, res, next) => {
  *         '405':
  *           description: Incorrect request data
  */
-router.get(
-    "/case/:caseId",
-    auth.restrict(["get_data"]),
-    async (req, res, next) => {
-        const data = await getBooksByCase(req.params.caseId);
-        response(res, req, data);
-    }
-);
+router.get("/case/:caseId", auth.restrict(["get_data"]), async (req, res) => {
+    const data = await getBooksByCase(req.params.caseId);
+    response(res, req, data);
+});
 
 /**
  * @swagger
@@ -204,14 +200,10 @@ router.get(
  *         '405':
  *           description: Incorrect request data
  */
-router.get(
-    "/shelf/:shelfId",
-    auth.restrict(["get_data"]),
-    async (req, res, next) => {
-        const data = await getBooksByShelf(req.params.shelfId);
-        response(res, req, data);
-    }
-);
+router.get("/shelf/:shelfId", auth.restrict(["get_data"]), async (req, res) => {
+    const data = await getBooksByShelf(req.params.shelfId);
+    response(res, req, data);
+});
 
 /**
  * @swagger
@@ -238,27 +230,23 @@ router.get(
  *         '405':
  *           description: Incorrect request data
  */
-router.get(
-    "/cover/:bookId",
-    auth.restrict(["get_data"]),
-    async (req, res, next) => {
-        const data = await getBooks(req.params.bookId);
+router.get("/cover/:bookId", auth.restrict(["get_data"]), async (req, res) => {
+    const data = await getBooks(req.params.bookId);
 
-        if (data?.book?.cover && typeof data?.book?.cover == "string") {
-            const image = Buffer.from(data?.book?.cover, "base64");
-            res.writeHead(200, {
-                "Content-Type": "image/png",
-                "Content-Length": image.length,
-            });
-            res.end(image);
-        } else {
-            response(res, req, {
-                error: { message: "Unable to retrieve cover" },
-                status: "error",
-            });
-        }
+    if (data?.book?.cover && typeof data?.book?.cover == "string") {
+        const image = Buffer.from(data?.book?.cover, "base64");
+        res.writeHead(200, {
+            "Content-Type": "image/png",
+            "Content-Length": image.length,
+        });
+        res.end(image);
+    } else {
+        response(res, req, {
+            error: { message: "Unable to retrieve cover" },
+            status: "error",
+        });
     }
-);
+});
 
 /**
  * @swagger
@@ -278,7 +266,7 @@ router.get(
  *         '405':
  *           description: Incorrect request data
  */
-router.post("/", auth.restrict(["add_data"]), async (req, res, next) => {
+router.post("/", auth.restrict(["add_data"]), async (req, res) => {
     const data = await addBooks(req.body);
     response(res, req, data);
 });
@@ -308,7 +296,7 @@ router.post("/", auth.restrict(["add_data"]), async (req, res, next) => {
  *         '405':
  *           description: Incorrect request data
  */
-router.get("/:bookId", auth.restrict(["get_data"]), async (req, res, next) => {
+router.get("/:bookId", auth.restrict(["get_data"]), async (req, res) => {
     const data = await getBooks(req.params.bookId, req.user);
     response(res, req, data);
 });
@@ -338,14 +326,10 @@ router.get("/:bookId", auth.restrict(["get_data"]), async (req, res, next) => {
  *         '405':
  *           description: Incorrect request data
  */
-router.put(
-    "/:bookId",
-    auth.restrict(["update_data"]),
-    async (req, res, next) => {
-        const data = await updateBooks(req.params.bookId, req.body, req.user);
-        response(res, req, data);
-    }
-);
+router.put("/:bookId", auth.restrict(["update_data"]), async (req, res) => {
+    const data = await updateBooks(req.params.bookId, req.body, req.user);
+    response(res, req, data);
+});
 
 /**
  * @swagger
@@ -372,13 +356,81 @@ router.put(
  *         '405':
  *           description: Incorrect request data
  */
-router.delete(
-    "/:bookId",
-    auth.restrict(["delete_data"]),
-    async (req, res, next) => {
-        const data = await deleteBooks(req.params.bookId);
+router.delete("/:bookId", auth.restrict(["delete_data"]), async (req, res) => {
+    const data = await deleteBooks(req.params.bookId);
+    response(res, req, data);
+});
+
+/**
+ * @swagger
+ * /books/ebook/{bookId}:
+ *    post:
+ *      summary: Upload an ebook
+ *      tags: [books]
+ *      parameters:
+ *        - in: path
+ *          name: bookId
+ *          schema:
+ *            type: string
+ *          required: true
+ *          description: The book ID string
+ *      responses:
+ *         '200':
+ *           description: Success
+ *         '500':
+ *           description: Error
+ *         '401':
+ *           description: Unauthorized
+ *         '403':
+ *           description: Forbidden
+ *         '405':
+ *           description: Incorrect request data
+ */
+router.post(
+    "/ebook/:bookId",
+    auth.restrict(["update_data"]),
+    upload.single("ebook"),
+    async (req, res) => {
+        const data = await addEbook(req.params.bookId, req.user, req.file);
         response(res, req, data);
     }
 );
+
+/**
+ * @swagger
+ * /books/ebook/{bookId}:
+ *    get:
+ *      summary: Download an ebook
+ *      tags: [books]
+ *      parameters:
+ *        - in: path
+ *          name: bookId
+ *          schema:
+ *            type: string
+ *          required: true
+ *          description: The book ID string followed by .epub
+ *      responses:
+ *         '200':
+ *           description: Success
+ *         '500':
+ *           description: Error
+ *         '401':
+ *           description: Unauthorized
+ *         '403':
+ *           description: Forbidden
+ *         '405':
+ *           description: Incorrect request data
+ */
+router.get("/ebook/:bookId", auth.restrict(["get_data"]), async (req, res) => {
+    const data = await getEbook(req.params.bookId);
+
+    if (data.filename) {
+        res.set("Content-Type", data.contentType);
+        res.set("Content-Disposition", `attachment; filename=${data.filename}`);
+        data.downloadStream.pipe(res);
+    } else {
+        response(res, req, data);
+    }
+});
 
 module.exports = router;
