# backend/routes/users.js
@@ -133,7 +133,6 @@ router.get(
 router.put("/current", async (req, res, next) => {
     delete req.body?.roles;
     delete req.body?.enabled;
-    delete req.body?.libraries;
     const data = await updateUsers(req.user, req.body);
     response(res, req, data);
 });
